--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 
 <button onclick="Show()">Show hidden content</button>
 
-<template>
-
-<h2>Flower</h2>
+<h2>i LOVE YOUU</h2>
 
 </template>
 
 </body>
- </html>
+ </html> 
